test/classes/errors/newValueNotType2.good
newValueNotType2.chpl:7: error: invalid use of 'new'
newValueNotType2.chpl:10: error: invalid use of 'new'
